--- a/style.css
+++ b/style.css
@@ -160,4 +160,17 @@ body {
       padding: 0.5rem;
     }
   }
+
+  .botao-email-fixo {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #ff72b6;
+    color: white;
+    font-size: 24px;
+    text-decoration: none;
+    padding: 12px 16px;
+    border-radius: 50%;
+    box-shadow:
+}  
   
