--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* fontes e estilo base */
+
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #ffffff;
@@ -41,7 +42,32 @@ body {
     padding: 0.5rem 1rem;
     border-radius: 999px;
     transition: background 0.3s ease;
+
+    align-items: center;
   }
+
+  .sidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index: 999;
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background-color: #ffffff;
+  }
+
+  .sidebar li {
+    width: 100%;
+  }
+  .sidebar a{
+    width: 100%;
+  }
+  
   
   nav a:hover {
     background-color: #ffee51;
@@ -159,7 +185,17 @@ body {
     nav a {
       padding: 0.5rem;
     }
+
+    .hideOnMobile{
+      display: none;
+    }
   }
+
+@media (min-width: 601px) {
+  .hideOnPc{
+    display: none;
+  }
+}
 
   .botao-fixo-email {
     position: fixed;
