--- a/style.css
+++ b/style.css
@@ -52,14 +52,15 @@ body {
     right: 0;
     height: 100vh;
     width: 250px;
-    z-index: 999;
-    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 9999;
+    /* box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);*/
     display: none;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
     background-color: #ffffff;
   }
+ 
 
   .sidebar li {
     width: 100%;
@@ -67,6 +68,7 @@ body {
   .sidebar a{
     width: 100%;
   }
+ 
   
   
   nav a:hover {
@@ -83,6 +85,7 @@ body {
   
   section {
     margin-bottom: 3rem;
+    margin-right: 3rem;
   }
   
   h2 {
@@ -168,7 +171,7 @@ body {
   }
   
   /* responsivo */
-  @media (max-width: 600px) {
+  @media (max-width: 800px) {
     h1 {
       font-size: 2.5rem;
     }
@@ -178,8 +181,11 @@ body {
     }
   
     nav ul {
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
+      position: fixed;
+      top: 5.6%;
+      right: 0;
     }
   
     nav a {
@@ -189,11 +195,13 @@ body {
     .hideOnMobile{
       display: none;
     }
+    
   }
 
-@media (min-width: 601px) {
+@media (min-width: 801px) {
   .hideOnPc{
     display: none;
+
   }
 }
 
